Fixed tabstrip-alignment with browser-zoom != 100% in IE8. (RM-3470)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@21792 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMultiView.css
+++ b/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMultiView.css
@@ -184,6 +184,7 @@ div.tabbedMultiViewTabStrip span.tabStripTab a:hover
 div.tabbedMultiViewTabStrip span.tabStripTabSelected
 {
   border: solid 1px #083779;
+  border-bottom: none;
 }
 
 body.msie7 div.tabbedMultiViewTabStrip span.tabStripTabSelected
@@ -195,13 +196,13 @@ div.tabbedMultiViewTabStrip span.tabStripTabSelected a
 {
   border: none;
   border-bottom: solid 1px White;
-  margin-bottom: -1px;
   background-color: White;
   color: #0D4EBA;
 }
 
 body.msie7 div.tabbedMultiViewTabStrip span.tabStripTabSelected a
 {
+  margin-bottom: -1px;
   padding-bottom: 1px;
 }
 
